# primitiv

./: .gitignore  CLAUDE.md  COMPONENT-SIZE-VARIANT-CONVENTION.md  Cargo.toml  DENSE_TYPOGRAPHY_PROPOSAL.md  FIGMA-PLUGIN-LEARNING-PLAN.md  LICENSE  NAMING.md  README.md  RELEASING.md  ROADMAP.md  button-component-set-layout.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  switch-figma-spec.md
.claude/: settings.json
.claude/commands/: carousel-variant.md  figma.md  scaffold-component.md  token-sync.md  tweak-component.md
.claude/hooks/: session-start.sh
.claude/plans/: RESUME.md  figma-integration.md
.github/workflows/: ci.yml  deploy-docs.yml  e2e-carousel.yml  (+8 more)
crates/harmoni-wasm/: Cargo.toml
crates/harmoni-wasm/src/: lib.rs  types.rs
docs/: build-typography-checklist-pdf.sh  carousel-development-log.md  carousel-development-plan.md  carousel-multi-slide-plan.md  carousel-native-first-plan.md  character-brief.md  consumption-design.md  docs-site-planning.md  figma-typography-checklist.html  form-controls-future-work.md  mutation-testing-plan.md  plugin-ui-design-guide.md  prose-base-styles-plan.md  select-future-work.md  transfer-and-next-steps.md  workflow-loops.md
logo-concepts/: brand.html  compose_sheet.py  finalize_logos.py  gen_favicon.py  gen_jost.py  gen_wordmark.py  wordmarks.html
registry/: registry.json
reserved/: README.md
scripts/: bump-version.mjs  check-registry-types.mjs  figma-token-audit.js  mutate.mjs  mutation-survivors.mjs  token-audit.json
tmp-flow-harness/: .gitignore  README.md  index.html  package.json  shoot.mjs
(+831 files in other folders)
