[package]
name = "harmoni-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
harmoni-core = { path = "../harmoni-core" }
palette = "0.7.6"
wasm-bindgen = "0.2"
js-sys = "0.3"                                         # JavaScript System library for array handling
serde-wasm-bindgen = "0.6"                         # High-performance bridge for Serde <-> JS
serde = { version = "1.0", features = ["derive"] }
tsify = "0.4.5"

[package.metadata.wasm-pack.profile.release]
# wasm-opt bundled with wasm-pack (jetli/wasm-pack-action@v0.4.0) predates
# multi-table wasm and fails to parse the binary. Disable it here; optimise
# at the bundler level (Vite/Rollup tree-shakes and compresses the wasm).
wasm-opt = false
